<resources>
    <string name="app_name">eadate</string>

    <string name="signup_name">Sign Up</string>
    <string name="signUp_name">Sign Up</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">User Name</string>
    <string name="passwordHint">password</string>
    <string name="confirmpasswordHint">Confirm Password</string>
    <string name="birthdayHint">Birthday</string>
    <string name="genderHint">Gender</string>
    <string name="referdalHint">Referdal Number</string>
    <string name="signup_cancellabel">Cancel</string>
    <string name="signup_signuplabel">Sign up</string>

    <string name="forgetButtonText">Forget Password</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="title_activity_main_main">MainMainActivity</string>

    >>>>>>>>>>> HEAD
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    =======
    <!--TabMeString-->
    <string name="action_settings">Settings</string>

    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>
    <string name="tab_search">搜索</string>
    <string name="tab_message">消息</string>


    <string-array name="me_menu_chinese">
        <item>相册</item>
        <item>收藏</item>
        <item>钱包</item>
        <item>卡包</item>
    </string-array>

    <string-array name="me_menu_english">
        <item>My Posts</item>
        <item>Favorites</item>
        <item>Wallet</item>
        <item>Card Pack</item>
    </string-array>

    <string-array name="personal_info_chinese">
        <item>用户名</item>
        <item>ID</item>
        <item>我的二维码</item>
        <item>性别</item>
        <item>我的地址</item>
        <item>年龄</item>
        <item>感情生活</item>
        <item>个性签名</item>
        <item>地区</item>
        <item>学校</item>
        <item>工作</item>
    </string-array>

    <string-array name="personal_info_english">
        <item>Name</item>
        <item>ID</item>
        <item>QR Code</item>
        <item>Address</item>
        <item>Gender</item>
        <item>Date of birth</item>
        <item>Marriage</item>
        <item>What is Up</item>
        <item>Region</item>
    </string-array>

    <string-array name="gender_chinese">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="gender_english">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="marriage_chinese">
        <item>保密</item>
        <item>单身</item>
        <item>恋爱中</item>
        <item>已婚</item>
        <item>同性</item>
    </string-array>

    <string-array name="marriage_english">
        <item>Secret</item>
        <item>Single</item>
        <item>married</item>
    </string-array>

    <string-array name="region_chinese">
        <item>中国</item>
        <item>加拿大</item>
        <item>韩国</item>
        <item>日本</item>
        <item>美国</item>
        <item>澳大利亚</item>
        <item>英国</item>
        <item>德国</item>
    </string-array>

    <string-array name="job_chinese">
        <item>信息技术</item>
        <item>金融保险</item>
        <item>商业服务</item>
        <item>工程制造</item>
        <item>交通运输</item>
        <item>文化传媒</item>
        <item>娱乐体育</item>
        <item>公共事业</item>
        <item>学生</item>
        <item>无</item>
    </string-array>

    <!--信息技术-->
    <string-array name="information_chinese">
        <item>互联网</item>
        <item>IT</item>
        <item>通讯</item>
        <item>电信运营</item>
        <item>网络游戏</item>
    </string-array>

    <!--金融保险-->
    <string-array name="finance_chinese">
        <item>投资</item>
        <item>股票/基金</item>
        <item>保险</item>
        <item>银行</item>
        <item>信托/担保</item>
    </string-array>

    <!--商业服务-->
    <string-array name="business_chinese">
        <item>咨询</item>
        <item>个体经营</item>
        <item>美容美发</item>
        <item>旅游</item>
        <item>酒店餐饮</item>
        <item>休闲娱乐</item>
        <item>贸易</item>
        <item>汽车</item>
        <item>房地产</item>
        <item>物业管理</item>
        <item>装修/装潢</item>
    </string-array>

    <!--工程制造-->
    <string-array name="engineering_chinese">
        <item>建筑</item>
        <item>土木工程</item>
        <item>机械制造</item>
        <item>电子</item>
        <item>生物医药</item>
        <item>食品</item>
        <item>服装</item>
        <item>能源</item>
    </string-array>

    <!--交通运输-->
    <string-array name="transport_chinese">
        <item>航空</item>
        <item>铁路</item>
        <item>航运/船舶</item>
        <item>公共交通</item>
        <item>物流运输</item>
    </string-array>

    <!--文化传媒-->
    <string-array name="media_chinese">
        <item>媒体出版</item>
        <item>设计</item>
        <item>文化传播</item>
        <item>广告创意</item>
        <item>动漫</item>
        <item>公关/会展</item>
        <item>摄影</item>
    </string-array>

    <!--娱乐体育-->
    <string-array name="entertainment_chinese">
        <item>影视</item>
        <item>运动体育</item>
        <item>音乐</item>
        <item>模特</item>
    </string-array>

    <!--公共事业-->
    <string-array name="commonality_chinese">
        <item>医疗</item>
        <item>法律</item>
        <item>教育</item>
        <item>政府机关</item>
        <item>科研</item>
        <item>工益</item>
    </string-array>

    <string-array name="province_chinese">
        <item>医疗</item>
        <item>法律</item>
        <item>教育</item>
        <item>政府机关</item>
        <item>科研</item>
        <item>工益</item>
    </string-array>

    <string-array name="school_chinese">
        <item>北京大学</item>
        <item>清华大学</item>
        <item>复旦大学</item>
        <item>中山大学</item>
    </string-array>

    <string name="add_school">添加学校信息</string>

    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>

    <string name="login_error_message">Please make sure you enter a username and password.</string>
    <string name="login_error_title">Oops!</string>
    <string name="title_activity_me_settings">MeSettingsActivity</string>
    <string name="title_activity_activity_multilevel_menu">ActivityMultilevelMenu</string>
    <string name="title_activity_activity_second_level_menu">ActivitySecondLevelMenu</string>
    <string name="title_activity_activity_third_level_menu">ActivityThirdLevelMenu</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="title_activity_edit_text">EditTextActivity</string>
    <string name="title_activity_birth_date">BirthDateActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_checkbox">CheckboxActivity</string>
    <string name="title_activity_single_choice">SingleChoiceActivity</string>
    <string name="title_activity_gender">GenderActivity</string>
    <string name="title_activity_marriage">MarriageActivity</string>
    <string name="title_activity_job">JobActivity</string>
    <string name="title_activity_job_detail">JobDetailActivity</string>
    <string name="title_activity_region">RegionActivity</string>
    <string name="title_activity_school">SchoolActivity</string>
    <string name="title_activity_add_school">AddSchoolActivity</string>
    <string name="title_activity_search_school">SearchSchoolActivity</string>
    <string name="title_activity_photo_edit">PhotoEditActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- TabMeString End-->

    <!-- TODO: new Activity string part -->

    <string-array name="newactivity_types_array">
        <item>0</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="newactivity_numbers_array">
        <item>0</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="newactivity_paymenttypes_array">
        <item>0</item>
        <item>AA</item>
        <item>BB</item>
        <item>CC</item>
        <item>DD</item>
    </string-array>

    <string name="add">Create</string>
    <string name="search">Search</string>
    <string name="newactivityNextButton">Next</string>
    <string name="newactivityBackButton">Redo</string>
    <string name="newactivitySubmitButton">Submit</string>
    <string name="newactivityPreviousBtn">pre</string>

    <string-array name="Activities_Search">
        <item>Search by Activity Type</item>
        <item>Search by Activity Name</item>
        <item>Search by Activity Area</item>
        <item>Search by Activity ...... </item>
    </string-array>

    >>>>>>> master
</resources>
